[package]
name    = "maildir"
version = "0.4.2"
authors = ["Kartikaya Gupta", "Matthias Beyer"]
edition = "2018"
license = "0BSD"

categories  = ["email", "filesystem"]
description = "A simple library for maildir manipulation"
homepage    = "https://github.com/staktrace/maildir/blob/master/README.md"
keywords    = ["maildir", "email", "rfc822", "mime"]
readme      = "README.md"
repository  = "https://git.sr.ht/~matthiasbeyer/maildir"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
mailparse.git = "https://git.sr.ht/~matthiasbeyer/mailparse"
gethostname   = "0.2.1"

[dev-dependencies]
percent-encoding = "1.0.1"
tempfile         = "3.0.8"
walkdir          = "2.2.7"
